leftnav button overflow firefox fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@27958 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/freshdirect.css
+++ b/projects/Media/docroot/assets/css/common/freshdirect.css
@@ -738,6 +738,8 @@ section.main .leftnav .menuBox button.category > span {
   white-space: nowrap;
   line-height: 1.3em;
   position: relative;
+  padding-right: 14px;
+  max-width: 127px;
 }
 
 .leftnav-category-popup-button.cssbutton > span:after,
